2008-03-06  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/eyecandy.cpp: Make the eye candy solid, this
	gets rid of potentially expensive blending operations in what should
	be our quick display pipeline. Visually still looks great IMHO.
	
	* libavogadro/src/engine.cpp: Emit changed when the engine's status is
	changed, i.e. enabled->disabled or vice versa.

	* libavogadro/src/glwidget.*: Added a new invalidateDLs slot that
	should be called whenever the display lists need invalidating. Updated
	our display list invalidation to hopefully be more efficient.

2008-03-06  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/forceengine.*: Render forces on atoms. Uses
	OBConformerData, needs latest OB SVN to work.

2008-03-05  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Stop invalidating the cache on mouse
	release - I think we have all the events covered that should
	invalidate the cache now without this catch all.

	* libavogadro/src/engines/orbitalengine.cpp: Just draw GL_LINES.

	* libavogadro/src/tools/selectrotatetool.cpp: Change cursor types
	depending upon the action being performed - better visual cues.

2008-03-04  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Added a second light source to our
	scene - position and brightness may need tweaking. Surface rendering
	was improved by this.

	* libavogadro/src/engines/bsdyengine.cpp: Draw multiple bonds in quick
	draw. Switching between multiple and single bonds can be distracting.
	Should possibly switch to single bonds only with large molecules.

	* libavogadro/src/glwidget.cpp: Add back in some makeCurrent calls
	that really were necessary outside of the threaded GL #ifdefs. This
	fixes PR#1906403.

2008-03-01  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/bsdyengine.*: Add a renderQuick function to
	this engine. Selected atoms/bonds rendered as opaque objects using the